avoid viewport unit issues on mobile

--- a/src/components/app/container/BalanceContainer/BalanceContainer.scss
+++ b/src/components/app/container/BalanceContainer/BalanceContainer.scss
@@ -91,6 +91,11 @@
 
 @media( max-width: $break-mobile ) {
 
+    // viewport height on mobile is not consistent, just allow the window to scroll
+    .balanceContainer__content {
+        max-height: none;
+    }
+
     .balanceContainer__top {
         padding: 15px;
     }
